Introduce restful conventions

--- a/webfront/app/views/submissions/new.html.haml
+++ b/webfront/app/views/submissions/new.html.haml
@@ -1,6 +1,6 @@
 %h1 RunScript#index
 %p Find me in app/views/run_script/index.html.erb
 
-= form_for "script", :url => run_path do |f|
+= form_for "script", :url => submissions_path do |f|
   = f.text_area :script
   = f.submit
