--- a/webfront/app/views/layouts/application.html.haml
+++ b/webfront/app/views/layouts/application.html.haml
@@ -4,13 +4,24 @@
     = stylesheet_link_tag :all
     = javascript_include_tag :defaults
     = csrf_meta_tag
-  %body
-    - if current_user
-      Signed in as
-      = current_user.email
-      |
-      = link_to 'Sign out', destroy_user_session_path
-    - else
-      = link_to 'Sign in', new_user_session_path
-      = link_to 'Sign up', new_user_registration_path
-    = yield
+  %body{class: params[:controller]}
+    #container
+      #user_nav
+        - if current_user
+          Logged in as
+          = current_user.email
+          = link_to 'Log out', destroy_user_session_path
+        - else
+          = link_to 'Sign up', new_user_session_path
+          or
+          = link_to 'log in', new_user_registration_path
+      - flash.each do |name, msg|
+        %div{id: "flash_#{name}"} msg
+      #menu
+        = link_to "Home", root_path
+        |
+        = link_to "Tasks", tasks_path
+        |
+        = link_to "Submit", new_submission_path
+
+      = yield
