--- a/webfront/app/views/layouts/application.html.haml
+++ b/webfront/app/views/layouts/application.html.haml
@@ -12,9 +12,9 @@
           = current_user.email
           = link_to 'Log out', destroy_user_session_path
         - else
-          = link_to 'Sign up', new_user_session_path
+          = link_to 'Sign up', new_user_registration_path
           or
-          = link_to 'log in', new_user_registration_path
+          = link_to 'log in', new_user_session_path
       - flash.each do |name, msg|
         %div{id: "flash_#{name}"} msg
       #menu
