Improve the solution model.
Add submissions history, rename fields in Submission model, remove the
Run model, add relationship between Submissino and User.

--- a/webfront/app/views/layouts/application.html.haml
+++ b/webfront/app/views/layouts/application.html.haml
@@ -23,5 +23,7 @@
         = link_to "Tasks", tasks_path
         |
         = link_to "Submit", new_submission_path
+        |
+        = link_to "Submissions", submissions_path
 
       = yield
