--- a/webfront/app/views/submissions/new.html.haml
+++ b/webfront/app/views/submissions/new.html.haml
@@ -1,6 +1,8 @@
 %h1 Submit solution
 
-= form_for "script", url: submissions_path do |f|
-  = f.text_area :script
+= form_for 'submission', url: submissions_path do |f|
+  = f.select :task, Task.all.map(&:name)
+  %br
+  = f.text_area :source
   %br
   = f.submit
